k8s/base/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-backend
  template:
    metadata:
      labels:
        app: rss-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/conradylx/rss-summarizer-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
