k8s/base/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-redis
  template:
    metadata:
      labels:
        app: rss-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
