k8s/base/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rss-backend
spec:
  selector:
    app: rss-backend
  ports:
    - port: 8000
      targetPort: 8000
